--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* Import Tailwind CSS - Pastikan Tailwind dikonfigurasi dengan benar di proyek Anda */
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import "base";
+@import "components";
+@import "utilities";
 
 /* Impor Google Fonts - Ini juga bisa dilakukan melalui <link> di public/index.html */
 /* @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap'); */
